crates/nerve-workstation/src/flow/tests/snapshots/nerve__flow__tests__strategy__golden_debate.snap
---
source: crates/nerve-workstation/src/flow/tests/strategy.rs
expression: render_outcome(&outcome)
---
ok=true
summary=debate: judge ruled
results:
  [0] ok=true text="RULING"
