crates/nerve-workstation/src/flow/tests/snapshots/nerve__flow__tests__strategy__golden_hierarchical.snap
---
source: crates/nerve-workstation/src/flow/tests/strategy.rs
expression: render_outcome(&outcome)
---
ok=true
summary=hierarchical: planner + child (single: node ok=true (4 chars))
results:
  [0] ok=true text="PLAN"
  [1] ok=true text="DONE"
