crates/nerve-workstation/src/flow/tests/snapshots/nerve__flow__tests__strategy__golden_map_reduce.snap
---
source: crates/nerve-workstation/src/flow/tests/strategy.rs
expression: render_outcome(&outcome)
---
ok=true
summary=map_reduce: 3/3 map shard(s) ok, reduce ok
results:
  [0] ok=true text="MERGED"
