crates/nerve-workstation/src/flow/tests/snapshots/nerve__flow__tests__strategy__golden_vote_judge_tie.snap
---
source: crates/nerve-workstation/src/flow/tests/strategy.rs
expression: render_outcome(&outcome)
---
ok=true
summary=vote_judge: 2 candidate(s) ok, judge ok
results:
  [0] ok=true text="TIE BROKEN: X"
